# shrike

./: .dex.conf  .gitignore  .shrike.toml  Cargo.toml  LICENSE  README.md  dex  dex.conf.example  shrike.repo.toml.example  shrike.toml.example
.github/workflows/: codeql.yml  nightly.yml  release.yml  shfmt.yml
.woodpecker/: check.yml  nightly.yml
shrike.d/: example.toml
src/: cli.rs  env_spec.rs  generate.rs  git.rs  list.rs  logfile.rs  main.rs  signal.rs  slug.rs  trust.rs  workdir.rs
src/config/: mod.rs  parse.rs  resolve.rs  types.rs
src/display/: ansi.rs  mod.rs  output.rs  rolling.rs
src/docker/: container.rs  exec.rs  image.rs  mod.rs
