[package]
name = "shrike"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "shrike"
path = "src/main.rs"

[dependencies]
clap          = { version = "4", features = ["derive"] }
toml          = "0.8"
regex         = "1"
dirs          = "5"
nix           = { version = "0.29", features = ["signal", "process", "fs"] }
libc          = "0.2"
tempfile      = "3"
terminal_size = "0.4"
indexmap      = "2"
portable-pty = "0.9.0"
